tests/errors/incomplete_display.stderr
error[E0277]: `E` doesn't implement `std::fmt::Display`
  --> tests/errors/incomplete_display.rs:15:20
   |
15 |     println!("{}", E::Dot);
   |               --   ^^^^^^ `E` cannot be formatted with the default formatter
   |               |
   |               required by this formatting parameter
   |
help: the trait `std::fmt::Display` is not implemented for `E`
  --> tests/errors/incomplete_display.rs:8:1
   |
 8 | pub enum E {
   | ^^^^^^^^^^
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
